Replaced service-repository interactions - Removed unused code - Added controller mapping